--- a/06-PyChain/Aula-01/Aula-01.ipynb
+++ b/06-PyChain/Aula-01/Aula-01.ipynb
@@ -4,13 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Aula 01 - "
+    "# Aula 01 - SHA256"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
